--- a/Engine_Godoy_Fabbri/Engine_Godoy_Fabbri/Engine_Godoy_Fabbri.vcxproj.filters
+++ b/Engine_Godoy_Fabbri/Engine_Godoy_Fabbri/Engine_Godoy_Fabbri.vcxproj.filters
@@ -24,7 +24,10 @@
     <ClCompile Include="..\src\Source\Renderer.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\Source\Test.cpp">
+    <ClCompile Include="..\src\Source\Source.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\Source\Game.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
   </ItemGroup>
@@ -36,6 +39,9 @@
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
     <ClInclude Include="..\src\Headers\Window.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\Headers\Game.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
   </ItemGroup>
