--- a/Engine_Godoy_Fabbri/Engine_Godoy_Fabbri/Engine_Godoy_Fabbri.vcxproj
+++ b/Engine_Godoy_Fabbri/Engine_Godoy_Fabbri/Engine_Godoy_Fabbri.vcxproj
@@ -23,20 +23,16 @@
     <ClCompile Include="..\src\Source\Camera.cpp" />
     <ClCompile Include="..\src\Source\Entity.cpp" />
     <ClCompile Include="..\src\Source\Entity2D.cpp" />
-    <ClCompile Include="..\src\Source\Input.cpp" />
-    <ClCompile Include="..\src\Source\Renderer.cpp" />
-    <ClCompile Include="..\src\Source\Shader.cpp" />
-    <ClCompile Include="..\src\Source\Shape.cpp" />
     <ClCompile Include="..\src\Source\GameTime.cpp">
       <RuntimeLibrary>MultiThreadedDebugDll</RuntimeLibrary>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
       <Optimization>Disabled</Optimization>
       <SupportJustMyCode>true</SupportJustMyCode>
       <AssemblerOutput>NoListing</AssemblerOutput>
-      <AssemblerListingLocation>C:\Users\Aula 2\Downloads\TSDV-PG1-Fabbri-Godoy\Engine_Godoy_Fabbri\obj\</AssemblerListingLocation>
+      <AssemblerListingLocation>C:\Users\Administrator\source\repos\TSDV-PG1-Fabbri-Godoy\Engine_Godoy_Fabbri\obj\</AssemblerListingLocation>
       <UndefineAllPreprocessorDefinitions>false</UndefineAllPreprocessorDefinitions>
       <BrowseInformation>false</BrowseInformation>
-      <BrowseInformationFile>C:\Users\Aula 2\Downloads\TSDV-PG1-Fabbri-Godoy\Engine_Godoy_Fabbri\obj\</BrowseInformationFile>
+      <BrowseInformationFile>C:\Users\Administrator\source\repos\TSDV-PG1-Fabbri-Godoy\Engine_Godoy_Fabbri\obj\</BrowseInformationFile>
       <CompileAs>Default</CompileAs>
       <ConformanceMode>true</ConformanceMode>
       <DiagnosticsFormat>Column</DiagnosticsFormat>
@@ -58,37 +54,37 @@
       <LanguageStandard>Default</LanguageStandard>
       <LanguageStandard_C>Default</LanguageStandard_C>
       <MinimalRebuild>false</MinimalRebuild>
-      <ModuleDependenciesFile>C:\Users\Aula 2\Downloads\TSDV-PG1-Fabbri-Godoy\Engine_Godoy_Fabbri\obj\</ModuleDependenciesFile>
-      <ModuleOutputFile>C:\Users\Aula 2\Downloads\TSDV-PG1-Fabbri-Godoy\Engine_Godoy_Fabbri\obj\</ModuleOutputFile>
+      <ModuleDependenciesFile>C:\Users\Administrator\source\repos\TSDV-PG1-Fabbri-Godoy\Engine_Godoy_Fabbri\obj\</ModuleDependenciesFile>
+      <ModuleOutputFile>C:\Users\Administrator\source\repos\TSDV-PG1-Fabbri-Godoy\Engine_Godoy_Fabbri\obj\</ModuleOutputFile>
       <OmitDefaultLibName>false</OmitDefaultLibName>
       <FavorSizeOrSpeed>Neither</FavorSizeOrSpeed>
       <WholeProgramOptimization>false</WholeProgramOptimization>
-      <ObjectFileName>C:\Users\Aula 2\Downloads\TSDV-PG1-Fabbri-Godoy\Engine_Godoy_Fabbri\obj\</ObjectFileName>
+      <ObjectFileName>C:\Users\Administrator\source\repos\TSDV-PG1-Fabbri-Godoy\Engine_Godoy_Fabbri\obj\</ObjectFileName>
       <CallingConvention>Cdecl</CallingConvention>
-      <ProgramDataBaseFileName>C:\Users\Aula 2\Downloads\TSDV-PG1-Fabbri-Godoy\Engine_Godoy_Fabbri\obj\vc142.pdb</ProgramDataBaseFileName>
+      <ProgramDataBaseFileName>C:\Users\Administrator\source\repos\TSDV-PG1-Fabbri-Godoy\Engine_Godoy_Fabbri\obj\vc142.pdb</ProgramDataBaseFileName>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <PrecompiledHeaderFile>stdafx.h</PrecompiledHeaderFile>
-      <PrecompiledHeaderOutputFile>C:\Users\Aula 2\Downloads\TSDV-PG1-Fabbri-Godoy\Engine_Godoy_Fabbri\obj\Engine_Godoy_Fabbri.pch</PrecompiledHeaderOutputFile>
+      <PrecompiledHeaderOutputFile>C:\Users\Administrator\source\repos\TSDV-PG1-Fabbri-Godoy\Engine_Godoy_Fabbri\obj\Engine_Godoy_Fabbri.pch</PrecompiledHeaderOutputFile>
       <PreprocessToFile>false</PreprocessToFile>
       <PreprocessKeepComments>false</PreprocessKeepComments>
       <PreprocessSuppressLineNumbers>false</PreprocessSuppressLineNumbers>
       <RemoveUnreferencedCodeData>true</RemoveUnreferencedCodeData>
       <ScanSourceForModuleDependencies>false</ScanSourceForModuleDependencies>
       <ShowIncludes>false</ShowIncludes>
-      <SourceDependenciesFile>C:\Users\Aula 2\Downloads\TSDV-PG1-Fabbri-Godoy\Engine_Godoy_Fabbri\obj\</SourceDependenciesFile>
+      <SourceDependenciesFile>C:\Users\Administrator\source\repos\TSDV-PG1-Fabbri-Godoy\Engine_Godoy_Fabbri\obj\</SourceDependenciesFile>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <BufferSecurityCheck>true</BufferSecurityCheck>
       <SmallerTypeCheck>false</SmallerTypeCheck>
       <SpectreMitigation>false</SpectreMitigation>
       <StructMemberAlignment>Default</StructMemberAlignment>
-      <TrackerLogDirectory>C:\Users\Aula 2\Downloads\TSDV-PG1-Fabbri-Godoy\Engine_Godoy_Fabbri\obj\Engine_G.4dfaa669.tlog\</TrackerLogDirectory>
+      <TrackerLogDirectory>C:\Users\Administrator\source\repos\TSDV-PG1-Fabbri-Godoy\Engine_Godoy_Fabbri\obj\Engine_G.4dfaa669.tlog\</TrackerLogDirectory>
       <TranslateIncludes>false</TranslateIncludes>
       <MinimalRebuildFromTracking>true</MinimalRebuildFromTracking>
       <TreatWarningAsError>false</TreatWarningAsError>
       <TreatWChar_tAsBuiltInType>true</TreatWChar_tAsBuiltInType>
       <UseFullPaths>true</UseFullPaths>
       <WarningLevel>Level3</WarningLevel>
-      <XMLDocumentationFileName>C:\Users\Aula 2\Downloads\TSDV-PG1-Fabbri-Godoy\Engine_Godoy_Fabbri\obj\</XMLDocumentationFileName>
+      <XMLDocumentationFileName>C:\Users\Administrator\source\repos\TSDV-PG1-Fabbri-Godoy\Engine_Godoy_Fabbri\obj\</XMLDocumentationFileName>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <IntelJCCErratum>false</IntelJCCErratum>
       <TreatAngleIncludeAsExternal>false</TreatAngleIncludeAsExternal>
@@ -99,9 +95,13 @@
       <EnablePREfast>false</EnablePREfast>
       <OmitFramePointers>false</OmitFramePointers>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>C:\Users\Aula 2\Downloads\TSDV-PG1-Fabbri-Godoy\Engine_Godoy_Fabbri\lib;C:\Users\Aula 2\Downloads\TSDV-PG1-Fabbri-Godoy\Engine_Godoy_Fabbri\src\Headers</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\Administrator\source\repos\TSDV-PG1-Fabbri-Godoy\Engine_Godoy_Fabbri\lib;C:\Users\Administrator\source\repos\TSDV-PG1-Fabbri-Godoy\Engine_Godoy_Fabbri\src\Headers</AdditionalIncludeDirectories>
       <LinkCompiled>true</LinkCompiled>
     </ClCompile>
+    <ClCompile Include="..\src\Source\Input.cpp" />
+    <ClCompile Include="..\src\Source\Renderer.cpp" />
+    <ClCompile Include="..\src\Source\Shader.cpp" />
+    <ClCompile Include="..\src\Source\Shape.cpp" />
     <ClCompile Include="..\src\Source\Transform.cpp" />
     <ClCompile Include="..\src\Source\Window.cpp" />
   </ItemGroup>
@@ -111,11 +111,11 @@
     <ClInclude Include="..\src\Headers\Entity.h" />
     <ClInclude Include="..\src\Headers\Entity2D.h" />
     <ClInclude Include="..\src\Headers\Exports.h" />
+    <ClInclude Include="..\src\Headers\GameTime.h" />
     <ClInclude Include="..\src\Headers\Input.h" />
     <ClInclude Include="..\src\Headers\Renderer.h" />
     <ClInclude Include="..\src\Headers\Shader.h" />
     <ClInclude Include="..\src\Headers\Shape.h" />
-    <ClInclude Include="..\src\Headers\GameTime.h" />
     <ClInclude Include="..\src\Headers\Transform.h" />
     <ClInclude Include="..\src\Headers\Window.h" />
   </ItemGroup>
