--- a/Engine_Godoy_Fabbri/Engine_Godoy_Fabbri/Engine_Godoy_Fabbri.vcxproj
+++ b/Engine_Godoy_Fabbri/Engine_Godoy_Fabbri/Engine_Godoy_Fabbri.vcxproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ClCompile Include="..\src\Source\Animation.cpp" />
     <ClCompile Include="..\src\Source\BaseGame.cpp" />
+    <ClCompile Include="..\src\Source\BoxCollider2D.cpp" />
     <ClCompile Include="..\src\Source\Camera.cpp" />
     <ClCompile Include="..\src\Source\CollisionManager.cpp" />
     <ClCompile Include="..\src\Source\Entity.cpp" />
@@ -39,6 +40,7 @@
   <ItemGroup>
     <ClInclude Include="..\src\Headers\Animation.h" />
     <ClInclude Include="..\src\Headers\BaseGame.h" />
+    <ClInclude Include="..\src\Headers\BoxCollider2D.h" />
     <ClInclude Include="..\src\Headers\Camera.h" />
     <ClInclude Include="..\src\Headers\CollisionManager.h" />
     <ClInclude Include="..\src\Headers\Entity.h" />
