Added tile class

--- a/Engine_Godoy_Fabbri/Engine_Godoy_Fabbri/Engine_Godoy_Fabbri.vcxproj
+++ b/Engine_Godoy_Fabbri/Engine_Godoy_Fabbri/Engine_Godoy_Fabbri.vcxproj
@@ -34,6 +34,7 @@
     <ClCompile Include="..\src\Source\Sprite.cpp" />
     <ClCompile Include="..\src\Source\stb_image.cpp" />
     <ClCompile Include="..\src\Source\TextureImporter.cpp" />
+    <ClCompile Include="..\src\Source\Tile.cpp" />
     <ClCompile Include="..\src\Source\Transform.cpp" />
     <ClCompile Include="..\src\Source\Window.cpp" />
   </ItemGroup>
@@ -53,6 +54,7 @@
     <ClInclude Include="..\src\Headers\Shape.h" />
     <ClInclude Include="..\src\Headers\Sprite.h" />
     <ClInclude Include="..\src\Headers\TextureImporter.h" />
+    <ClInclude Include="..\src\Headers\Tile.h" />
     <ClInclude Include="..\src\Headers\Transform.h" />
     <ClInclude Include="..\src\Headers\Window.h" />
   </ItemGroup>
