Added debug class

--- a/Engine_Godoy_Fabbri/Engine_Godoy_Fabbri/Engine_Godoy_Fabbri.vcxproj
+++ b/Engine_Godoy_Fabbri/Engine_Godoy_Fabbri/Engine_Godoy_Fabbri.vcxproj
@@ -24,6 +24,7 @@
     <ClCompile Include="..\src\Source\BoxCollider2D.cpp" />
     <ClCompile Include="..\src\Source\Camera.cpp" />
     <ClCompile Include="..\src\Source\CollisionManager.cpp" />
+    <ClCompile Include="..\src\Source\Debug.cpp" />
     <ClCompile Include="..\src\Source\Entity.cpp" />
     <ClCompile Include="..\src\Source\Entity2D.cpp" />
     <ClCompile Include="..\src\Source\GameTime.cpp" />
@@ -47,6 +48,7 @@
     <ClInclude Include="..\src\Headers\BoxCollider2D.h" />
     <ClInclude Include="..\src\Headers\Camera.h" />
     <ClInclude Include="..\src\Headers\CollisionManager.h" />
+    <ClInclude Include="..\src\Headers\Debug.h" />
     <ClInclude Include="..\src\Headers\Entity.h" />
     <ClInclude Include="..\src\Headers\Entity2D.h" />
     <ClInclude Include="..\src\Headers\Exports.h" />
@@ -65,6 +67,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="..\res\shaders\Basic.shader" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="..\res\shaders\Shape.shader" />
@@ -221,4 +224,11 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
+  <Import Project="..\packages\boost.1.87.0\build\boost.targets" Condition="Exists('..\packages\boost.1.87.0\build\boost.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105.The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\boost.1.87.0\build\boost.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\boost.1.87.0\build\boost.targets'))" />
+  </Target>
 </Project>
